force-app/main/default/objects/SeisakuSiharai__c/SeisakuSiharai__c.object-meta.xml
<CustomObject>
    <label>制作・支払</label>
    <nameField>
        <label>制作・支払ID</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>