force-app/main/default/objects/SeisakuSiharai__c/fields/account__c.field-meta.xml
<CustomField>
    <fullName>account__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Account/&quot; + menu__r.custom_opportunity__r.clent_name__r.Id + &quot;/view&quot;, menu__r.custom_opportunity__r.clent_name__r.Name,&quot;_blank&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>社名</label>
    <type>Text</type>
</CustomField>