force-app/main/default/objects/SeisakuSiharai__c/fields/ad_feature__c.field-meta.xml
<CustomField>
    <fullName>ad_feature__c</fullName>
    <formula>TEXT(menu__r.ad_feature__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>広告特集名</label>
    <type>Text</type>
</CustomField>