force-app/main/default/objects/SeisakuSiharai__c/fields/ad_type__c.field-meta.xml
<CustomField>
    <fullName>ad_type__c</fullName>
    <formula>TEXT( menu__r.ad_type__c )</formula>
    <label>広告種類</label>
    <type>Text</type>
</CustomField>