force-app/main/default/objects/SeisakuSiharai__c/fields/after_14__c.field-meta.xml
<CustomField>
    <fullName>after_14__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>発注日から90日たっても請求書の到着日がブランクの場合、チェックが入ります</inlineHelpText>
    <label>14日経過チェック</label>
    <type>Checkbox</type>
</CustomField>