force-app/main/default/objects/SeisakuSiharai__c/fields/baitai_name__c.field-meta.xml
<CustomField>
    <fullName>baitai_name__c</fullName>
    <formula>TEXT( menu__r.baitai_name__c )</formula>
    <label>媒体名</label>
    <type>Text</type>
</CustomField>