force-app/main/default/objects/SeisakuSiharai__c/fields/common_ammount__c.field-meta.xml
<CustomField>
    <fullName>common_ammount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>共通費ID</label>
    <referenceTo>CommonAmount__c</referenceTo>
    <relationshipLabel>対象制作・支払レコード</relationshipLabel>
    <relationshipName>ZhsV</relationshipName>
    <type>Lookup</type>
</CustomField>