force-app/main/default/objects/SeisakuSiharai__c/fields/common_amount__c.field-meta.xml
<CustomField>
    <fullName>common_amount__c</fullName>
    <label>共通費（按分前）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>