force-app/main/default/objects/SeisakuSiharai__c/fields/common_amount_divede__c.field-meta.xml
<CustomField>
    <fullName>common_amount_divede__c</fullName>
    <formula>common_amount__c / record_count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>共通費(按分後)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>