force-app/main/default/objects/SeisakuSiharai__c/fields/cost__c.field-meta.xml
<CustomField>
    <fullName>cost__c</fullName>
    <formula>product_cost__c  +  common_amount_divede__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>費用（税別）＋共通費（按分後）</inlineHelpText>
    <label>制作費（税別）＋共通費（按分後）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>