force-app/main/default/objects/SeisakuSiharai__c/fields/customers_type__c.field-meta.xml
<CustomField>
    <fullName>customers_type__c</fullName>
    <formula>TEXT(menu__r.custom_opportunity__r.agency_name__r.FlgAd__c)</formula>
    <label>代理店フラグ</label>
    <type>Text</type>
</CustomField>