force-app/main/default/objects/SeisakuSiharai__c/fields/delivery_date__c.field-meta.xml
<CustomField>
    <fullName>delivery_date__c</fullName>
    <label>納品日</label>
    <type>Date</type>
</CustomField>