force-app/main/default/objects/SeisakuSiharai__c/fields/e_account__c.field-meta.xml
<CustomField>
    <fullName>e_account__c</fullName>
    <formula>menu__r.custom_opportunity__r.clent_name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>出力用_社名</label>
    <type>Text</type>
</CustomField>