force-app/main/default/objects/SeisakuSiharai__c/fields/end_date__c.field-meta.xml
<CustomField>
    <fullName>end_date__c</fullName>
    <formula>menu__r.end_date__c</formula>
    <label>終了日</label>
    <type>Date</type>
</CustomField>