force-app/main/default/objects/SeisakuSiharai__c/fields/event_date__c.field-meta.xml
<CustomField>
    <fullName>event_date__c</fullName>
    <formula>menu__r.event_date__c</formula>
    <label>開催日</label>
    <type>Date</type>
</CustomField>