force-app/main/default/objects/SeisakuSiharai__c/fields/InterViewDate__c.field-meta.xml
<CustomField>
    <fullName>InterViewDate__c</fullName>
    <label>取材日</label>
    <type>Date</type>
</CustomField>