force-app/main/default/objects/SeisakuSiharai__c/fields/invoice_arrival_date__c.field-meta.xml
<CustomField>
    <fullName>invoice_arrival_date__c</fullName>
    <label>請求書到着日</label>
    <type>Date</type>
</CustomField>