force-app/main/default/objects/SeisakuSiharai__c/fields/irokou__c.field-meta.xml
<CustomField>
    <fullName>irokou__c</fullName>
    <defaultValue>false</defaultValue>
    <label>色校を出す必要ある</label>
    <type>Checkbox</type>
</CustomField>