force-app/main/default/objects/SeisakuSiharai__c/fields/last_id__c.field-meta.xml
<CustomField>
    <fullName>last_id__c</fullName>
    <description>ID採番処理用</description>
    <label>最終ID</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>