force-app/main/default/objects/SeisakuSiharai__c/fields/menu__c.field-meta.xml
<CustomField>
    <fullName>menu__c</fullName>
    <label>メニューID</label>
    <referenceTo>Menu__c</referenceTo>
    <relationshipLabel>制作・支払</relationshipLabel>
    <relationshipName>a8Ep</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>