force-app/main/default/objects/SeisakuSiharai__c/fields/menu_type__c.field-meta.xml
<CustomField>
    <fullName>menu_type__c</fullName>
    <label>メニュー名</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>雑誌</fullName>
            </value>
            <value>
                <fullName>WEB</fullName>
            </value>
            <value>
                <fullName>WEBその他</fullName>
            </value>
            <value>
                <fullName>DMPレポーティング</fullName>
            </value>
            <value>
                <fullName>ブースト</fullName>
            </value>
            <value>
                <fullName>抜刷</fullName>
            </value>
            <value>
                <fullName>セミナー</fullName>
            </value>
            <value>
                <fullName>スクール</fullName>
            </value>
            <value>
                <fullName>カスタム</fullName>
            </value>
            <value>
                <fullName>アンケート</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>