force-app/main/default/objects/SeisakuSiharai__c/fields/nukizuri_design__c.field-meta.xml
<CustomField>
    <fullName>nukizuri_design__c</fullName>
    <formula>TEXT(menu__r.nukizuri_design__c)</formula>
    <label>表紙デザイン</label>
    <type>Text</type>
</CustomField>