force-app/main/default/objects/SeisakuSiharai__c/fields/nukizuri_size__c.field-meta.xml
<CustomField>
    <fullName>nukizuri_size__c</fullName>
    <formula>TEXT(	menu__r.nukizuri_size__c)</formula>
    <label>抜刷サイズ・開き方</label>
    <type>Text</type>
</CustomField>