force-app/main/default/objects/SeisakuSiharai__c/fields/order_date__c.field-meta.xml
<CustomField>
    <fullName>order_date__c</fullName>
    <label>発注日</label>
    <type>Date</type>
</CustomField>