force-app/main/default/objects/SeisakuSiharai__c/fields/page_number__c.field-meta.xml
<CustomField>
    <fullName>page_number__c</fullName>
    <formula>TEXT( menu__r.page_number__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ページ数</label>
    <type>Text</type>
</CustomField>