force-app/main/default/objects/SeisakuSiharai__c/fields/pdf__c.field-meta.xml
<CustomField>
    <fullName>pdf__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PDF校了</label>
    <type>Checkbox</type>
</CustomField>