force-app/main/default/objects/SeisakuSiharai__c/fields/product_by_date__c.field-meta.xml
<CustomField>
    <fullName>product_by_date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>納品</label>
    <type>Checkbox</type>
</CustomField>