force-app/main/default/objects/SeisakuSiharai__c/fields/product_cost2__c.field-meta.xml
<CustomField>
    <fullName>product_cost2__c</fullName>
    <formula>product_cost__c * ( 1 + tax_rate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>費用(税込)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>