force-app/main/default/objects/SeisakuSiharai__c/fields/product_cost__c.field-meta.xml
<CustomField>
    <fullName>product_cost__c</fullName>
    <label>費用(税別)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>