force-app/main/default/objects/SeisakuSiharai__c/fields/product_memo__c.field-meta.xml
<CustomField>
    <fullName>product_memo__c</fullName>
    <label>制作の備考</label>
    <length>255</length>
    <type>Text</type>
</CustomField>