force-app/main/default/objects/SeisakuSiharai__c/fields/product_menu__c.field-meta.xml
<CustomField>
    <fullName>product_menu__c</fullName>
    <label>制作物・委託物・実施物</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>オンラインページ（CMS)</fullName>
            </value>
            <value>
                <fullName>オンラインページ（html）</fullName>
            </value>
            <value>
                <fullName>原稿（ライティング）</fullName>
            </value>
            <value>
                <fullName>誌面デザイン</fullName>
            </value>
            <value>
                <fullName>バナー</fullName>
            </value>
            <value>
                <fullName>イラスト</fullName>
            </value>
            <value>
                <fullName>図</fullName>
            </value>
            <value>
                <fullName>ポートレート</fullName>
            </value>
            <value>
                <fullName>動画</fullName>
            </value>
            <value>
                <fullName>会場関連費（事前）</fullName>
            </value>
            <value>
                <fullName>会場関連費（事後）</fullName>
            </value>
            <value>
                <fullName>デザイン物</fullName>
            </value>
            <value>
                <fullName>印刷物</fullName>
            </value>
            <value>
                <fullName>告知関連</fullName>
            </value>
            <value>
                <fullName>当日運営業務</fullName>
            </value>
            <value>
                <fullName>機材オペレート</fullName>
            </value>
            <value>
                <fullName>事後アンケート集計</fullName>
            </value>
            <value>
                <fullName>取材有識者謝礼</fullName>
            </value>
            <value>
                <fullName>講演者謝礼</fullName>
            </value>
            <value>
                <fullName>編集プロダクション制作依頼</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>