force-app/main/default/objects/SeisakuSiharai__c/fields/product_status2__c.field-meta.xml
<CustomField>
    <fullName>product_status2__c</fullName>
    <inlineHelpText>その他制作の進行ステータス</inlineHelpText>
    <label>進行ステータス(その他制作・支払)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>発注</fullName>
            </value>
            <value>
                <fullName>手配・制作中</fullName>
            </value>
            <value>
                <fullName>納品</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>