force-app/main/default/objects/SeisakuSiharai__c/fields/product_status__c.field-meta.xml
<CustomField>
    <fullName>product_status__c</fullName>
    <label>進行ステータス(記事広告制作)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>オリエン</fullName>
            </value>
            <value>
                <fullName>取材</fullName>
            </value>
            <value>
                <fullName>原稿制作中</fullName>
            </value>
            <value>
                <fullName>初校</fullName>
            </value>
            <value>
                <fullName>再校</fullName>
            </value>
            <value>
                <fullName>念校</fullName>
            </value>
            <value>
                <fullName>校了</fullName>
            </value>
            <value>
                <fullName>（WEB）公開</fullName>
            </value>
            <value>
                <fullName>（誌面）入稿済み</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>