force-app/main/default/objects/SeisakuSiharai__c/fields/published_page__c.field-meta.xml
<CustomField>
    <fullName>published_page__c</fullName>
    <formula>TEXT( menu__r.published_page__c )</formula>
    <label>掲載面</label>
    <type>Text</type>
</CustomField>