force-app/main/default/objects/SeisakuSiharai__c/fields/record_count__c.field-meta.xml
<CustomField>
    <fullName>record_count__c</fullName>
    <label>制作支払レコード数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>