force-app/main/default/objects/SeisakuSiharai__c/fields/sales_date__c.field-meta.xml
<CustomField>
    <fullName>sales_date__c</fullName>
    <formula>(menu__r.sales_date__c)</formula>
    <label>売上計上日</label>
    <type>Date</type>
</CustomField>