force-app/main/default/objects/SeisakuSiharai__c/fields/seikyu_invoice_month__c.field-meta.xml
<CustomField>
    <fullName>seikyu_invoice_month__c</fullName>
    <label>請求書月</label>
    <length>6</length>
    <type>Text</type>
</CustomField>