force-app/main/default/objects/SeisakuSiharai__c/fields/seisaku_director1__c.field-meta.xml
<CustomField>
    <fullName>seisaku_director1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>サブ担当①</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ENbd</relationshipName>
    <type>Lookup</type>
</CustomField>