force-app/main/default/objects/SeisakuSiharai__c/fields/seisaku_director2__c.field-meta.xml
<CustomField>
    <fullName>seisaku_director2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>サブ担当②</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ENcM</relationshipName>
    <type>Lookup</type>
</CustomField>