force-app/main/default/objects/SeisakuSiharai__c/fields/seisaku_director3__c.field-meta.xml
<CustomField>
    <fullName>seisaku_director3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>サブ担当③</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ENcg</relationshipName>
    <type>Lookup</type>
</CustomField>