force-app/main/default/objects/SeisakuSiharai__c/fields/seisaku_hattyusaki__c.field-meta.xml
<CustomField>
    <fullName>seisaku_hattyusaki__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>制作発注先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>制作・支払</relationshipLabel>
    <relationshipName>vKhP</relationshipName>
    <type>Lookup</type>
</CustomField>