force-app/main/default/objects/SeisakuSiharai__c/fields/seisaku_hattyusaki_tantousha__c.field-meta.xml
<CustomField>
    <fullName>seisaku_hattyusaki_tantousha__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>発注先担当者</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.seisaku_hattyusaki__c</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>制作・支払</relationshipLabel>
    <relationshipName>seisaku_hattyusaki_tantousha</relationshipName>
    <type>Lookup</type>
</CustomField>