force-app/main/default/objects/SeisakuSiharai__c/fields/seisaku_invoice__c.field-meta.xml
<CustomField>
    <fullName>seisaku_invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>請求書</label>
    <type>Checkbox</type>
</CustomField>