force-app/main/default/objects/SeisakuSiharai__c/fields/start_date__c.field-meta.xml
<CustomField>
    <fullName>start_date__c</fullName>
    <formula>menu__r.start_date__c</formula>
    <label>開始日</label>
    <type>Date</type>
</CustomField>