force-app/main/default/objects/SeisakuSiharai__c/fields/tax_rate__c.field-meta.xml
<CustomField>
    <fullName>tax_rate__c</fullName>
    <label>消費税率</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>