force-app/main/default/objects/SeisakuSiharai__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>タイプ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>記事広告制作</fullName>
            </value>
            <value>
                <fullName>その他制作・支払</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>