force-app/main/default/objects/SeisakuSiharai__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <label>入稿ページ/本番URL</label>
    <type>Url</type>
</CustomField>