force-app/main/default/objects/SeisakuSiharai__c/recordTypes/boost_view.recordType-meta.xml
<RecordType>
    <fullName>boost_view</fullName>
    <active>true</active>
    <label>05:ブースト一覧</label>
</RecordType>