force-app/main/default/objects/SeisakuSiharai__c/recordTypes/custom_view.recordType-meta.xml
<RecordType>
    <fullName>custom_view</fullName>
    <active>true</active>
    <label>09:カスタム一覧</label>
</RecordType>