force-app/main/default/objects/SeisakuSiharai__c/recordTypes/DMP_view.recordType-meta.xml
<RecordType>
    <fullName>DMP_view</fullName>
    <active>true</active>
    <label>04:DMPレポーティング一覧</label>
</RecordType>