force-app/main/default/objects/SeisakuSiharai__c/recordTypes/new.recordType-meta.xml
<RecordType>
    <fullName>new</fullName>
    <active>true</active>
    <label>00:新規</label>
</RecordType>