force-app/main/default/objects/SeisakuSiharai__c/recordTypes/nukizuri_view.recordType-meta.xml
<RecordType>
    <fullName>nukizuri_view</fullName>
    <active>true</active>
    <label>06:抜刷一覧</label>
</RecordType>