force-app/main/default/objects/SeisakuSiharai__c/recordTypes/other_view.recordType-meta.xml
<RecordType>
    <fullName>other_view</fullName>
    <active>true</active>
    <label>11:その他一覧</label>
</RecordType>