force-app/main/default/objects/SeisakuSiharai__c/recordTypes/questionnaire_view.recordType-meta.xml
<RecordType>
    <fullName>questionnaire_view</fullName>
    <active>true</active>
    <label>10:アンケート一覧</label>
</RecordType>