force-app/main/default/objects/SeisakuSiharai__c/recordTypes/school_view.recordType-meta.xml
<RecordType>
    <fullName>school_view</fullName>
    <active>true</active>
    <label>08:スクール一覧</label>
</RecordType>