force-app/main/default/objects/SeisakuSiharai__c/recordTypes/seminar_view.recordType-meta.xml
<RecordType>
    <fullName>seminar_view</fullName>
    <active>true</active>
    <label>07:セミナー一覧</label>
</RecordType>