force-app/main/default/objects/SeisakuSiharai__c/recordTypes/WEB_other_view.recordType-meta.xml
<RecordType>
    <fullName>WEB_other_view</fullName>
    <active>true</active>
    <label>03:Webその他一覧</label>
</RecordType>