force-app/main/default/objects/SeisakuSiharai__c/recordTypes/Web_view.recordType-meta.xml
<RecordType>
    <fullName>Web_view</fullName>
    <active>true</active>
    <label>02:Web一覧</label>
</RecordType>