force-app/main/default/objects/SeisakuSiharai__c/recordTypes/zassi_view.recordType-meta.xml
<RecordType>
    <fullName>zassi_view</fullName>
    <active>true</active>
    <label>01:雑誌一覧</label>
</RecordType>