force-app/main/default/objects/SeisakuSiharai__c/validationRules/AccountLock.validationRule-meta.xml
<ValidationRule>
    <fullName>AccountLock</fullName>
    <active>true</active>
    <errorConditionFormula>menu__r.custom_opportunity__r.clent_name__r.is_deleted__c</errorConditionFormula>
    <errorMessage>取引禁止のクライアントです。</errorMessage>
</ValidationRule>