force-app/main/default/objects/SeisakuSiharai__c/validationRules/ID_Lock.validationRule-meta.xml
<ValidationRule>
    <fullName>ID_Lock</fullName>
    <active>false</active>
    <errorConditionFormula>ISCHANGED( Name )</errorConditionFormula>
    <errorMessage>IDは編集禁止です</errorMessage>
</ValidationRule>