force-app/main/default/objects/SeisakuSiharai__c/validationRules/IsMenuTrue.validationRule-meta.xml
<ValidationRule>
    <fullName>IsMenuTrue</fullName>
    <active>true</active>
    <errorConditionFormula>menu__c == &#39;&#39;</errorConditionFormula>
    <errorDisplayField>menu__c</errorDisplayField>
    <errorMessage>メニューを選択してください</errorMessage>
</ValidationRule>