force-app/main/default/objects/SeisakuSiharai__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>RECORDTYPE</columns>
    <columns>menu__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>